# AoC-Cpp-Template

./: .gitignore  CMakeLists.txt  LICENSE  README.md  justfile
.devcontainer/: Dockerfile  cpp-dev.json
common/: InputFile.cpp  InputFile.hpp
cpp-day-template/: CMakeLists.txt.j2  main.cpp.j2
cpp-day-template/src/: include.hpp.j2  part01.cpp.j2  part02.cpp.j2
util/: new-day.py
